// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/skeleton/demo/active.md correctly 1`] = `
<div
  class="alu-skeleton alu-skeleton-active"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width:38%"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/basic.md correctly 1`] = `
<div
  class="alu-skeleton"
>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width:38%"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/children.md correctly 1`] = `
<div
  class="article"
>
  <div>
    <h4>
      Ant Design, a design language
    </h4>
    <p>
      We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
    </p>
  </div>
  <button
    class="alu-btn"
    type="button"
  >
    <span>
      Show Skeleton
    </span>
  </button>
</div>
`;

exports[`renders ./components/skeleton/demo/complex.md correctly 1`] = `
<div
  class="alu-skeleton alu-skeleton-with-avatar"
>
  <div
    class="alu-skeleton-header"
  >
    <span
      class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
    />
  </div>
  <div
    class="alu-skeleton-content"
  >
    <h3
      class="alu-skeleton-title"
      style="width:50%"
    />
    <ul
      class="alu-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/list.md correctly 1`] = `
<div>
  <button
    aria-checked="false"
    class="alu-switch"
    role="switch"
    type="button"
  >
    <span
      class="alu-switch-inner"
    />
  </button>
  <div
    class="alu-list alu-list-vertical alu-list-lg alu-list-split"
  >
    <div
      class="alu-spin-nested-loading"
    >
      <div
        class="alu-spin-container"
      >
        <div
          class="alu-list-item"
        >
          <div
            class="alu-list-item-content alu-list-item-content-single"
          >
            <div
              class="alu-skeleton alu-skeleton-with-avatar alu-skeleton-active"
            >
              <div
                class="alu-skeleton-header"
              >
                <span
                  class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
                />
              </div>
              <div
                class="alu-skeleton-content"
              >
                <h3
                  class="alu-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="alu-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="alu-list-item"
        >
          <div
            class="alu-list-item-content alu-list-item-content-single"
          >
            <div
              class="alu-skeleton alu-skeleton-with-avatar alu-skeleton-active"
            >
              <div
                class="alu-skeleton-header"
              >
                <span
                  class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
                />
              </div>
              <div
                class="alu-skeleton-content"
              >
                <h3
                  class="alu-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="alu-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="alu-list-item"
        >
          <div
            class="alu-list-item-content alu-list-item-content-single"
          >
            <div
              class="alu-skeleton alu-skeleton-with-avatar alu-skeleton-active"
            >
              <div
                class="alu-skeleton-header"
              >
                <span
                  class="alu-skeleton-avatar alu-skeleton-avatar-lg alu-skeleton-avatar-circle"
                />
              </div>
              <div
                class="alu-skeleton-content"
              >
                <h3
                  class="alu-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="alu-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
